--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,27 @@ version: '2'
 services:
     web:
         build: .
-        command: bin/rails server --port 3000 --binding 0.0.0.0
+        #command: bin/rails server --port 3000 --binding 0.0.0.0
+        command: bundle exec rails server --port 3000 --binding 0.0.0.0
+        #command: /bin/sh -c '/bin/bash'
         ports:
             - "3000:3000"
-        links:
-            - redis
-            # - mysql
-            - solr
-            - fcrepo
+        #        links:
+        #            - redis
+        #            # - mysql
+        #            - solr
+        #            - fcrepo
         volumes:
             - .:/usr/src/app
         volumes_from:
             - bundle
+        depends_on:
+            - redis
+            - solr
+            - fcrepo
+        #networks:
+        #    - front-tier
+        #    - back-tier
 
     bundle:
         image: shello_web
@@ -25,6 +34,8 @@ services:
         image: redis:3
         ports:
           - "6379:6379"
+        #networks:
+        #    - back-tier
     # mysql:
     #     image: mysql:5.6
     #     environment:
@@ -33,9 +44,17 @@ services:
         image: solr:5.5
         ports:
           - "8983:8983"
+        # networks:
+        #     - back-tier
     fcrepo:
-        image: fcrepo:4.5
+        image: botimer/misc:fcrepo-45
         ports:
           - "8984:8080"
+        #networks:
+        #    - back-tier
 
+
+        #networks:
+        #    front-tier:
+        #    back-tier:
 
