--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,8 +1,8 @@
 development:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: http://127.0.0.1:<%= ENV['FCREPO_DEVELOPMENT_PORT'] || 8984 %>/rest
-  base_path: /dev
+  url: http://fcrepo:8080/rest
+  base_path: /
 test:
   user: fedoraAdmin
   password: fedoraAdmin
