--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,59 +2,38 @@ version: '2'
 services:
     web:
         build: .
-        #command: bin/rails server --port 3000 --binding 0.0.0.0
-        command: bundle exec rails server --port 3000 --binding 0.0.0.0
-        #command: /bin/sh -c '/bin/bash'
+        command: bin/rails server --port 3000 --binding 0.0.0.0
         ports:
             - "3000:3000"
-        #        links:
-        #            - redis
-        #            # - mysql
-        #            - solr
-        #            - fcrepo
         volumes:
             - .:/usr/src/app
-        volumes_from:
-            - bundle
+            - bundle:/bundle
         depends_on:
             - redis
             - solr
             - fcrepo
-        #networks:
-        #    - front-tier
-        #    - back-tier
-
-    bundle:
-        image: shello_web
-        command: echo Data container... Online
-        volumes:
-            - /bundle
+            - mysql
 
     redis:
         image: redis:3
         ports:
           - "6379:6379"
-        #networks:
-        #    - back-tier
-    # mysql:
-    #     image: mysql:5.6
-    #     environment:
-    #       - MYSQL_ALLOW_EMPTY_PASSWORD=true
+    mysql:
+        image: mysql:5.6
+        environment:
+          - MYSQL_ALLOW_EMPTY_PASSWORD=true
     solr:
         image: solr:5.5
         ports:
           - "8983:8983"
-        # networks:
-        #     - back-tier
+        volumes:
+          - ./solr/config:/opt/config
     fcrepo:
         image: botimer/misc:fcrepo-45
         ports:
           - "8984:8080"
-        #networks:
-        #    - back-tier
 
-
-        #networks:
-        #    front-tier:
-        #    back-tier:
+volumes:
+    bundle:
+        driver: local
 
