Clean up Docker setup for sharing
 * Use lyrasis/fcrepo rather than my own image
 * Move to public repo/tag for sufia-base
 * Add a data volume for fcrepo
 * Adjust config URL for fcrepo

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,3 +1,7 @@
+# This is the Dockerfile for botimer/sufia-base. Pretty simple additions to the
+# rails image, despite the impressive size increase. There may be a way to
+# squash it down some.
+
 FROM rails:4.2.5
 
 RUN apt-get -y update && \
