--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,18 @@ version: '2'
 services:
     web:
         build: .
+        working_dir: /unison
+        environment:
+            - APP_HOME=/unison
+            - BUNDLE_GEMFILE=/unison/Gemfile
         command: bin/rails server --port 3000 --binding 0.0.0.0
         ports:
             - "3000:3000"
         volumes:
-            - .:/usr/src/app
+            #- .:/usr/src/app
             - bundle:/bundle
+        volumes_from:
+            - unison
         depends_on:
             - redis
             - solr
@@ -34,6 +40,14 @@ services:
             - fcrepo_data:/opt/data
         ports:
           - "8984:8080"
+    unison:
+        # image: leighmcculloch/unison
+        # image: ecc22beed337
+        image: botimer/unison-fsmonitor
+        environment:
+            - UNISON_VERSION=2.48.3
+        ports:
+            - "5000:5000"
 
 volumes:
     bundle:
