Upgrade to Rails 4.2.7.1 and Sufia 7.2.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
         volumes:
           - ./solr/config:/opt/config
     fcrepo:
-        image: lyrasis/fcrepo:4.5.0
+        image: botimer/fcrepo:4.5.1
         volumes:
             - fcrepo_data:/opt/data
         ports:
